--- a/.tmp/styles/responsive.css
+++ b/.tmp/styles/responsive.css
@@ -33,7 +33,7 @@ Things to remember:
   }
 
   .banner h1 {
-    font-size: 5em;
+    font-size: 4em;
     display: inline-block;
     margin-top: -35px;
   }
@@ -55,9 +55,13 @@ Things to remember:
 
 @media screen and (min-width: 768px) {
   .banner h1 {
-    font-size: 5em;
+    font-size: 4em;
     display: inline-block;
     margin: 0;
+  }
+
+  .banner h2 {
+    margin: 30px 0 0 0;
   }
 
   .filterButton {
