--- a/app/styles/responsive.css
+++ b/app/styles/responsive.css
@@ -14,47 +14,50 @@ Things to remember:
 
 @media screen and (min-width: 420px) {
 	.banner{
-  background-image: url('../images/bannerBackground.png');
-  height: 300px;
+	  background-image: url('../images/bannerBackground.png');
+	  height: 300px;
 	}
 	.banner input{
 		width: inherit;
-  	text-align: left;
-  	border: none;
+	  	text-align: left;
+	  	border: none;
 	}
 	.banner input:focus{
 		width: inherit;
-  	text-align: left;
-  	border: none;
+	  	text-align: left;
+	  	border: none;
 	}
 	.banner h1{
-		font-size: 5em;
-    display: inline-block;
-    margin-top: -35px;
+		font-size: 4em;
+	    display: inline-block;
+	    margin-top: -35px;
 	}
 	.banner h2{
-	font-size: 2em;
-  font-weight: 300;
-  margin: 0;
+		font-size: 2em;
+	  	font-weight: 300;
+	  	margin: 0;
 	}
 	#center_right{
 		width: 100%;
 	}
 	#search_nav input:focus{
-  width: 100px;
+  		width: 100px;
 	}
 }
 @media screen and (min-width: 768px) {
-  .banner h1{
-    font-size: 5em;
-    display: inline-block;
-    margin: 0;
-  }
+	.banner h1{
+	    font-size: 4em;
+	    display: inline-block;
+	    margin: 0;
+	}
+  	.banner h2{
+		margin: 30px 0 0 0;
+	}
 	.filterButton{
 		display: inline-block;
 	}
 	#search_nav input:focus{
-  width: 200px;
+  		width: 200px;
 	}
 	#center_left{
 		width: 200px;
@@ -68,7 +71,6 @@ Things to remember:
 }
 @media screen and (min-width: 1200px) {
 	.banner{
-  height: 400px;
+  		height: 400px;
 	}
-}
 }
